cluster/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  type: NodePort
  selector:
    app.kubernetes.io/name: grafana
