cluster/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: grafana
  labels:
    name: grafana
spec:
  tls:
    - hosts:
      - monitoring.biosimulations.org
      secretName: grafana-tls
  rules:
  - host: monitoring.biosimulations.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana
            port:
              number: 3000
